Revert "Merge pull request #60 from navikt/snyk-fix-1b72de017b93597b93acb92002ff2b7b"
This reverts commit 8c5167f5a9023a226a615ee3877e951ce3729c0c, reversing
changes made to bf0e051da7a892c9b3dc26ae04a436d3b45c7288.